# ddrs

./: .gitignore  6_19_26_journal.md  CLAUDE.md  Cargo.toml  README.md  book.toml
.claude/: 2026-05-29-ddrs-docs-design.md  ARCHITECTURE.md
.claude/references/: ddrs-algorithm.md  ddrs-architecture.md  ddrs-baseline.md  ddrs-burn-autograd.md  ddrs-comparing-to-ddr.md  ddrs-formatting-inputs.md  ddrs-graph-objects.md  ddrs-perf-and-cuda-graphs.md  ddrs-reading-inputs.md  ddrs-reading-outputs.md  ddrs-running-the-code.md  ddrs-setup.md
.claude/skills/: .regenerate-state.json  burn_custom_backward.md  ddrs-architecture.md  ddrs-burn-autograd.md  ddrs-comparing-to-ddr.md  ddrs-formatting-inputs.md  ddrs-graph-objects.md  ddrs-perf-and-cuda-graphs.md  ddrs-reading-inputs.md  ddrs-reading-outputs.md  ddrs-running-the-code.md  ddrs-setup.md  regenerate-docs.md
.claude/skills/ddrs-eval-plots/: SKILL.md
.claude/specs/: 2026-05-17-sp1-static-data-design.md  2026-05-17-sp1-static-data-plan.md  2026-05-17-sp2-async-data-design.md  2026-05-17-sp2-async-data-plan.md  2026-05-17-sp3-dataset-design.md  2026-05-17-sp3-dataset-plan.md  2026-05-17-sp4-training-design.md  2026-05-17-sp4-training-plan.md  2026-05-17-train_and_test-replication-design.md  2026-05-18-sp5-test-evaluation-design.md  2026-05-18-sp5-test-evaluation-plan.md  2026-05-20-sp6-cusparse-gpu-solve-design.md  2026-05-20-sp6-cusparse-gpu-solve-plan.md  2026-05-21-sp7-cusparse-stream-share-design.md  2026-05-21-sp7-cusparse-stream-share-plan.md  2026-05-22-sp8-diagnosis-findings.md  2026-05-22-sp8-mc-timestep-fusion-design.md  2026-05-22-sp8-mc-timestep-fusion-plan.md  2026-05-22-sp9-cusparse-spmv-design.md  2026-05-22-sp9-cusparse-spmv-plan.md  2026-05-26-sp10-cuda-graphs-design.md  2026-05-26-sp10-cuda-graphs-plan.md  2026-05-26-sp10a-pyo3-bridge-design.md  2026-05-26-sp10a-pyo3-bridge-plan.md  2026-05-27-sp10-chain-rewrite-plan.md  2026-05-29-ddrs-docs-plan.md
.github/workflows/: docs.yml
config/: merit_training.yaml
config/experiments/: leakance_daily_on.yaml  leakance_hourly_on.yaml
config/sources/: conus-hourly.yaml  conus.yaml  daily-lstm.yaml  global.yaml  hourly-lstm.yaml
ddrs-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
ddrs-py/src/: config.rs  conus.rs  denormalize.rs  error.rs  kan_head.rs  lib.rs  mlp.rs
ddrs-py/tests/: smoke.py
docs/: 2026-06-07-checkpoint-resume-handoff.md  2026-06-11-global-data-sources-handoff.md  2026-06-23-precip-disaggregation-findings.md  2026-07-01-leakance-hourly-experiment-handoff.md  2026-07-01-leakance-hourly-findings.md  2026-07-01-leakance-litreview.md  2026-07-02-leakance-diagnosis-findings.md  SUMMARY.md  algorithm.md  architecture.md  intro.md  nh-qprime-store-contract.md  setup.md
docs/reference/: baseline.md  burn-autograd.md  ddr-comparison.md  perf.md
docs/superpowers/plans/: 2026-05-30-ddrs-cli-lifecycle.md  2026-06-01-ddrs-cli-ux-and-readme.md  2026-06-02-ddr-ddrs-kan-parity.md  2026-06-02-summed-q-prime.md  2026-06-03-ddr-ddrs-trained-saturation-parity.md  2026-06-04-ddr-ddrs-training-step-parity.md  2026-06-04-ddrs-area-mode-downsample-fix.md  2026-06-04-matched-batch-replay.md  2026-06-06-gpkg-fabric-support.md  2026-06-06-gpu-device-config-handoff.md  2026-06-06-managed-adjacency.md  2026-06-06-merge-init-into-plan.md  2026-06-06-sigfpe-wukong-debug-handoff.md  2026-06-29-leakance-hourly-feasibility.md  2026-07-01-leakance-low-zeta-diagnosis.md  2026-07-01-nh-qprime-import.md
docs/superpowers/specs/: 2026-05-30-ddrs-cli-lifecycle-design.md  (+11 more)
docs/usage/: graph-objects.md  inputs-formatting.md  inputs-reading.md  outputs.md  running.md
examples/: benchmark_hydrograph.rs  compare_ddr_sandbox.rs  dump_init_params.rs  save_random_kan.rs
fixtures/sp4/: v1_ddr_loss.json  v2_ddr_loss.json
scripts/: dump_ddr_batch_order_and_train.py  dump_ddr_init_params.py  dump_ddr_loss.py  dump_ddr_test_predictions.py  dump_ddr_trained_params.py  dump_ddr_training_step.py  dump_kan_fixture.py  dump_kan_init_stats.py  dump_solver_gradcheck.py  dump_toposort_fixtures.py  export_ddr_sandbox.py  leakance_diagnosis.py  leakance_subset_analysis.py  make_streamflow_fixtures.py  merge_merit_basins.py  plot_predictions.ipynb  sp10_check_launches.sh  sp8_check_scatter.sh
src/: config.rs  dump_parameters.rs  error.rs  geometry.rs  lib.rs  sandbox.rs  sparse.rs
src/adjacency/: build.rs  cache.rs  dbf.rs  fabric.rs  gauges.rs  gpkg.rs  mod.rs  validate.rs  zarr_write.rs
src/baseline/: cache.rs  mod.rs  print.rs  summed_q_prime.rs
src/cli/: error.rs  fingerprint.rs  gc.rs  import.rs  init.rs  lockfile.rs  manifest.rs  mod.rs  plan.rs  plan_bootstrap.rs  run.rs  show.rs  sources.rs  status.rs  system.rs  tee.rs  types.rs  workspace.rs
src/cuda_graph/: capture.rs  geometry_kernel.rs  mod.rs  scratch.rs
src/data/: collate.rs  dataset.rs  dates.rs  error.rs  ids.rs  mod.rs  sampler.rs  statistics.rs  test_window.rs
src/nn/: disagg_head.rs  init.rs  kan_head.rs  mlp.rs  mod.rs
src/routing/: leakance.rs  mmc.rs  mmc_op.rs  mod.rs  utils.rs
src/sparse/: cusparse.rs  dispatch.rs  mod.rs
src/training/: bootstrap.rs  checkpoint.rs  driver.rs  eval.rs  forward.rs  loss.rs  metrics.rs  mod.rs  optimizer.rs  zarr_io.rs
tests/: adjacency_build.rs  adjacency_parity.rs  checkpoint_resume.rs  cli_deprecation_shim.rs  cli_fingerprint.rs  cli_first_run_e2e.rs  cli_init.rs  cli_init_stub.rs  cli_json_contract.rs  cli_lockfile.rs  cli_manifest.rs  cli_plan.rs  cli_plan_bootstrap.rs  cli_plan_fresh.rs  cli_plot.rs  cli_run_drift.rs  cli_run_preflight.rs  cli_runtime_failure.rs  cli_show.rs  cli_smoke.rs  cli_status_gc.rs  cli_system_backend.rs  cli_system_ready.rs  cli_tee.rs  cli_types.rs  cli_workspace.rs  cli_workspace_uninit.rs  common.rs  cusparse_ptr_spike.rs  data_async.rs  data_dataset.rs  data_static.rs  data_zarr_store.rs  device_selection.rs  geometry.rs  gpkg_fabric.rs  hourly_streamflow.rs  import_cmd.rs  kan_head.rs  kan_head_fixture_backward.rs  (+25 more)
tests/fixtures/: README.md  kan_head_init_seed42.npz  kan_init_stats_ddr.csv  toposort_fuzz.jsonl
(+311 files in other folders)
