[package]
name = "ddrs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Distributed Differentiable Routing in Rust — BURN port of the Muskingum-Cunge solver from ~/projects/ddr"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-cuda = { version = "0.21", default-features = false }
# Direct access to CubeTensor and CudaRuntime types for the cuSPARSE pointer bridge (SP-6).
burn-cubecl = { version = "0.21", default-features = false }
cubecl = { version = "0.10", default-features = false, features = ["cuda"] }
# Direct cuSPARSE bindings for the GPU triangular solve (SP-6).
# cudarc is already a transitive dep of cubecl-cuda; declaring it
# explicitly lets us enable the `cusparse` feature.
# `cuda-version-from-build-system` matches cubecl-cuda's pattern so
# the two cudarc instances unify on the same compile features.
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "cuda-version-from-build-system", "cusparse"] }
thiserror = "1"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }

# Data layer — read DDR's live training sources in place, no export step.
#   zarrs    : merit_conus_adjacency.zarr + merit_gages_conus_adjacency.zarr
#   icechunk : streamflow + observations (transactional zarr over local FS)
#   netcdf   : merit_global_attributes_v2.nc (HDF5-backed)
#   tokio    : icechunk is async-first; one runtime owned by the dataset
#   serde / serde_yaml : load config/merit_training.yaml
#   csv      : gage list (camels_670.csv etc.)
#   chrono   : Dates / time-window arithmetic
#   ndarray  : staging buffers between zarrs/netcdf reads and BURN tensors
#   rand     : seeded RandomSampler-equivalent + random rho-day window
zarrs = "0.23"
icechunk = "2"
netcdf = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ndarray = "0.16"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"

# Vendored forks of cubecl-cuda + burn-cubecl with `pub` accessors needed
# by SP-7's cuSPARSE GPU solve. See vendor/README.md for rationale +
# upstream PR plan (SP-8).
#
# All burn-* crates must come from the same source to avoid duplicate
# trait-object conflicts (burn_std::device::Device must be unified).
# The cubecl monorepo cascades similarly; patch the full set.
[patch.crates-io]
cubecl         = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-cuda    = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-common  = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-core    = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-cpp     = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-ir      = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-macros  = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-opt     = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-runtime = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-std     = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
cubecl-zspace  = { git = "https://github.com/taddyb/cubecl", branch = "ddrs-sp7-stream-accessor" }
burn-cubecl    = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-autodiff  = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-backend   = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-core      = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-cuda      = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-derive    = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-ir        = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-ndarray   = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-nn        = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-optim     = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-std       = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-tensor    = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
burn-fusion    = { git = "https://github.com/taddyb/burn",   branch = "ddrs-sp7-primitive-ctor"  }
