[package]
name = "ddrs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Distributed Differentiable Routing in Rust — BURN port of the Muskingum-Cunge solver from ~/projects/ddr"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-cuda = { version = "0.21", default-features = false }
# Direct access to CubeTensor and CudaRuntime types for the cuSPARSE pointer bridge (SP-6).
burn-cubecl = { version = "0.21", default-features = false }
cubecl = { version = "0.10", default-features = false, features = ["cuda"] }
cubecl-common = { version = "0.10" }
# Direct cuSPARSE bindings for the GPU triangular solve (SP-6).
# cudarc is already a transitive dep of cubecl-cuda; declaring it
# explicitly lets us enable the `cusparse` feature.
# `cuda-version-from-build-system` matches cubecl-cuda's pattern so
# the two cudarc instances unify on the same compile features.
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "cuda-version-from-build-system", "cusparse"] }
thiserror = "1"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }

# KAN head — pure-Rust port of pykan.KANLayer. Provides Burn-tensor B-spline edge
# activations with forward+backward parity vs pykan 0.2.x. Replaces the MLP
# placeholder in src/nn/ to match DDR-Python's actual head architecture.
rskan = { git = "https://github.com/taddyb/rskan.git", tag = "v0.1.0" }

# Data layer — read DDR's live training sources in place, no export step.
#   zarrs    : merit_conus_adjacency.zarr + merit_gages_conus_adjacency.zarr
#   icechunk : streamflow + observations (transactional zarr over local FS)
#   netcdf   : merit_global_attributes_v2.nc (HDF5-backed)
#   tokio    : icechunk is async-first; one runtime owned by the dataset
#   serde / serde_yaml : load config/merit_training.yaml
#   csv      : gage list (camels_670.csv etc.)
#   chrono   : Dates / time-window arithmetic
#   ndarray  : staging buffers between zarrs/netcdf reads and BURN tensors
#   rand     : seeded RandomSampler-equivalent + random rho-day window
zarrs = "0.23"
icechunk = "2"
netcdf = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ndarray = "0.16"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
which = "6"

[profile.release]
opt-level = 3
lto = "thin"

# Vendored forks of cubecl-cuda + burn-cubecl with `pub` accessors needed
# by SP-7's cuSPARSE GPU solve. See vendor/README.md for rationale +
# upstream PR plan (SP-8).
#
# Local clones of the SP-7 fork branches. Each clone must be on its
# ddrs-sp7-* branch (origin: github.com/taddyb). See vendor/README.md
# for upstream commit hashes + SP-8 upstream PR plan.
#
# All burn-* crates must come from the same source to avoid duplicate
# trait-object conflicts (burn_std::device::Device must be unified).
# The cubecl monorepo cascades similarly; patch the full set.
[patch.crates-io]
cubecl         = { path = "/home/tbindas/projects/cubecl/crates/cubecl" }
cubecl-cuda    = { path = "/home/tbindas/projects/cubecl/crates/cubecl-cuda" }
cubecl-common  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-common" }
cubecl-core    = { path = "/home/tbindas/projects/cubecl/crates/cubecl-core" }
cubecl-cpp     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-cpp" }
cubecl-ir      = { path = "/home/tbindas/projects/cubecl/crates/cubecl-ir" }
cubecl-macros  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-macros" }
cubecl-opt     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-opt" }
cubecl-runtime = { path = "/home/tbindas/projects/cubecl/crates/cubecl-runtime" }
cubecl-std     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-std" }
cubecl-zspace  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-zspace" }
burn-cubecl    = { path = "/home/tbindas/projects/burn/crates/burn-cubecl" }
burn-autodiff  = { path = "/home/tbindas/projects/burn/crates/burn-autodiff" }
burn-backend   = { path = "/home/tbindas/projects/burn/crates/burn-backend" }
burn-core      = { path = "/home/tbindas/projects/burn/crates/burn-core" }
burn-cuda      = { path = "/home/tbindas/projects/burn/crates/burn-cuda" }
burn-derive    = { path = "/home/tbindas/projects/burn/crates/burn-derive" }
burn-ir        = { path = "/home/tbindas/projects/burn/crates/burn-ir" }
burn-ndarray   = { path = "/home/tbindas/projects/burn/crates/burn-ndarray" }
burn-nn        = { path = "/home/tbindas/projects/burn/crates/burn-nn" }
burn-optim     = { path = "/home/tbindas/projects/burn/crates/burn-optim" }
burn-std       = { path = "/home/tbindas/projects/burn/crates/burn-std" }
burn-tensor    = { path = "/home/tbindas/projects/burn/crates/burn-tensor" }
burn-fusion    = { path = "/home/tbindas/projects/burn/crates/burn-fusion" }
