[package]
name = "ddrs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Distributed Differentiable Routing in Rust — BURN port of the Muskingum-Cunge solver from ~/projects/ddr"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-cuda = { version = "0.21", default-features = false }
# Direct access to CubeTensor and CudaRuntime types for the cuSPARSE pointer bridge (SP-6).
burn-cubecl = { version = "0.21", default-features = false }
cubecl = { version = "0.10", default-features = false, features = ["cuda"] }
cubecl-common = { version = "0.10" }
# Direct cuSPARSE bindings for the GPU triangular solve (SP-6).
# cudarc is already a transitive dep of cubecl-cuda; declaring it
# explicitly lets us enable the `cusparse` feature.
# `cuda-version-from-build-system` matches cubecl-cuda's pattern so
# the two cudarc instances unify on the same compile features.
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "cuda-version-from-build-system", "cusparse"] }
thiserror = "1"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }

# KAN head — pure-Rust port of pykan.KANLayer. Provides Burn-tensor B-spline edge
# activations with forward+backward parity vs pykan 0.2.x. Replaces the MLP
# placeholder in src/nn/ to match DDR-Python's actual head architecture.
rskan = { git = "https://github.com/taddyb/rskan.git", tag = "v0.1.3" }

# Data layer — read DDR's live training sources in place, no export step.
#   zarrs    : merit_conus_adjacency.zarr + merit_gages_conus_adjacency.zarr
#   icechunk : streamflow + observations (transactional zarr over local FS)
#   netcdf   : merit_global_attributes_v2.nc (HDF5-backed)
#   tokio    : icechunk is async-first; one runtime owned by the dataset
#   serde / serde_yaml : load config/merit_training.yaml
#   csv      : gage list (camels_670.csv etc.)
#   chrono   : Dates / time-window arithmetic
#   ndarray  : staging buffers between zarrs/netcdf reads and BURN tensors
#   rand     : seeded RandomSampler-equivalent + random rho-day window
zarrs = "0.23"
icechunk = "2"
# "static" builds bundled HDF5 + netcdf-c from source (needs cmake): the HPC
# host has no netcdf/hdf5 dev packages, and the module-provided ones are
# Intel-MPI-flavored shared libs that would break `ddrs` outside `module load`.
netcdf = { version = "0.12", features = ["static"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ndarray = "0.16"
ndarray-npy = { version = "0.9", optional = true }
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
os_pipe = "1"
humantime = "2"
dbase = "0.7.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
which = "6"

[features]
fixtures = ["dep:ndarray-npy"]
cuda = []  # enables the GPU branch of the fixture tests

[profile.release]
opt-level = 3
lto = "thin"

# Vendored forks of cubecl + burn with `pub` accessors needed by SP-7's
# cuSPARSE GPU solve. See vendor/README.md for rationale + upstream PR
# plan (SP-8).
#
# Pinned to branches on github.com/taddyb so anyone can `git clone &&
# cargo build` without having local clones of cubecl + burn. For local
# fork development: push your changes to the fork branch and run
# `cargo update -p cubecl -p burn-core` (or whichever crate(s) you
# changed) to pull the new commits.
#
# All burn-* crates must come from the same source to avoid duplicate
# trait-object conflicts (burn_std::device::Device must be unified).
# The cubecl monorepo cascades similarly; patch the full set.
[patch.crates-io]
cubecl         = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-cuda    = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-common  = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-core    = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-cpp     = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-ir      = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-macros  = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-opt     = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-runtime = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-std     = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
cubecl-zspace  = { git = "https://github.com/taddyb/cubecl.git", branch = "ddrs-release" }
burn-cubecl    = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-autodiff  = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-backend   = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-core      = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-cuda      = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-derive    = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-ir        = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-ndarray   = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-nn        = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-optim     = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-std       = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-tensor    = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
burn-fusion    = { git = "https://github.com/taddyb/burn.git",   branch = "ddrs-sp7-primitive-ctor" }
