[package]
name = "ddrs-py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for ddrs (read-only inference + parameter export)."

[lib]
name = "ddrs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ddrs = { path = ".." }
burn = { version = "0.21", default-features = false, features = ["std", "ndarray"] }
thiserror = "1"

# Match ddrs's vendored fork patches so cargo resolves a single set of burn-* crates.
[patch.crates-io]
cubecl         = { path = "/home/tbindas/projects/cubecl/crates/cubecl" }
cubecl-cuda    = { path = "/home/tbindas/projects/cubecl/crates/cubecl-cuda" }
cubecl-common  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-common" }
cubecl-core    = { path = "/home/tbindas/projects/cubecl/crates/cubecl-core" }
cubecl-cpp     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-cpp" }
cubecl-ir      = { path = "/home/tbindas/projects/cubecl/crates/cubecl-ir" }
cubecl-macros  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-macros" }
cubecl-opt     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-opt" }
cubecl-runtime = { path = "/home/tbindas/projects/cubecl/crates/cubecl-runtime" }
cubecl-std     = { path = "/home/tbindas/projects/cubecl/crates/cubecl-std" }
cubecl-zspace  = { path = "/home/tbindas/projects/cubecl/crates/cubecl-zspace" }
burn-cubecl    = { path = "/home/tbindas/projects/burn/crates/burn-cubecl" }
burn-autodiff  = { path = "/home/tbindas/projects/burn/crates/burn-autodiff" }
burn-backend   = { path = "/home/tbindas/projects/burn/crates/burn-backend" }
burn-core      = { path = "/home/tbindas/projects/burn/crates/burn-core" }
burn-cuda      = { path = "/home/tbindas/projects/burn/crates/burn-cuda" }
burn-derive    = { path = "/home/tbindas/projects/burn/crates/burn-derive" }
burn-ir        = { path = "/home/tbindas/projects/burn/crates/burn-ir" }
burn-ndarray   = { path = "/home/tbindas/projects/burn/crates/burn-ndarray" }
burn-nn        = { path = "/home/tbindas/projects/burn/crates/burn-nn" }
burn-optim     = { path = "/home/tbindas/projects/burn/crates/burn-optim" }
burn-std       = { path = "/home/tbindas/projects/burn/crates/burn-std" }
burn-tensor    = { path = "/home/tbindas/projects/burn/crates/burn-tensor" }
burn-fusion    = { path = "/home/tbindas/projects/burn/crates/burn-fusion" }

[profile.release]
opt-level = 3
lto = "thin"
