[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ddrs-py"
version = "0.1.0"
description = "Python bindings for ddrs (read-only inference + parameter export)."
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ddrs_py"
